--- a/peptide-analysis.Rmd
+++ b/peptide-analysis.Rmd
@@ -28,22 +28,43 @@ ups_ref <- read.csv("UPS Proteins.tsv",
 row.names(ups_ref) = ups_ref$ups_protein
 
 ups1_diag <- function(filename, title){
-  # Raw UPS1 Data
-  ups1_raw <- read.table(filename,
+  # Raw UPS data import and processing
+  ups2_raw <- read.table(filename,
                      sep = "\t", comment.char="", header = TRUE) %>%
     select(proteins = Protein.s.,
            Sequence,
-           validated_psms = X.Validated.PSMs)
-
+           ups2_validated_psms = X.Validated.PSMs)
+  
   # Filters the dataset to keep only UPS proteins
-  ups1 <- filter(ups1_raw, grepl("ups", ups1_protein)) %>%
+  ups2 <- filter(ups2_raw, grepl("ups", proteins)) %>%
     # Extracts the UPS protein's identifier
-    extract(proteins,'ups_protein', regex = '.*([A-Z][0-9]+)ups.*', remove = FALSE) %>%
+    extract(proteins,'ups_protein', regex = '.*([A-Z][0-9-]+)ups.*', remove = FALSE) %>%
     # Matches the extracted ID to the UPS_ref df to obtain the nominal fmol amount
     mutate(amount = ups_ref[ups_protein,]$ups2_amount)
-  ups1
+  
+  # Groups up UPS proteins, adding spectral counts for peptide hits of the same UPS protein
+  ups_proteins <- unique(ups2$ups_protein)
+  grouped_ups <- data.frame(amount = numeric(length(ups_proteins)),
+                            validated_psms = numeric(length(ups_proteins)))
+  for (i in seq_along(ups_proteins) ){
+    grouped_ups$amount[i] <- ups_ref[ups_proteins[i],]$ups1_amount
+    grouped_ups$validated_psms[i] <- sum(ups2[which(ups2$ups_protein == ups_proteins[i]),]$ups2_validated_psms)
+  }
+  row.names(grouped_ups) = ups_proteins
+
+  # Diagnostics
+  print(title)
+  print(length(ups_proteins))
+  
+  ggplot(grouped_ups, aes(x=amount, y=validated_psms)) + 
+    ggtitle(title) +
+    geom_point() +
+    geom_text(label=rownames(grouped_ups), position = position_nudge(x = .2, y =.2))
 }
 
+ups1_diag("Data/UPS/UPS1/UPS1_01-Peptide_Shaker_on_data_21__Peptide_Report.tabular", "UPS1 Replicate 1")
+ups1_diag("Data/UPS/UPS1/UPS1_02-Peptide_Shaker_on_data_31__Peptide_Report.tabular", "UPS1 Replicate 2")
+ups1_diag("Data/UPS/UPS1/UPS1_03-Peptide_Shaker_on_data_23__Peptide_Report.tabular", "UPS1 Replicate 3")
 ups1_diag("Data/UPS/UPS1/UPS1_04-Peptide_Shaker_on_data_24__Peptide_Report.tabular", "UPS1 Replicate 4")
 ```
 
@@ -59,11 +80,11 @@ ups2_diag <- function(filename, title){
     select(proteins = Protein.s.,
            Sequence,
            ups2_validated_psms = X.Validated.PSMs)
-  ups2_raw
+  
   # Filters the dataset to keep only UPS proteins
   ups2 <- filter(ups2_raw, grepl("ups", proteins)) %>%
     # Extracts the UPS protein's identifier
-    extract(proteins,'ups_protein', regex = '.*([A-Z][0-9]+)ups.*', remove = FALSE) %>%
+    extract(proteins,'ups_protein', regex = '.*([A-Z][0-9-]+)ups.*', remove = FALSE) %>%
     # Matches the extracted ID to the UPS_ref df to obtain the nominal fmol amount
     mutate(amount = ups_ref[ups_protein,]$ups2_amount)
   
@@ -89,7 +110,6 @@ ups2_diag <- function(filename, title){
     geom_text(label=rownames(grouped_ups), position = position_nudge(x = .2, y =.2))
 }
 
-ups2_diag("Data/UPS/UPS1/UPS1_04-Peptide_Shaker_on_data_24__Peptide_Report.tabular", "UPS1 Replicate 4")
 ups2_diag("Data/UPS/UPS2/UPS2_01-Peptide_Shaker_on_data_25__Peptide_Report.tabular", "UPS2 Replicate 1")
 ups2_diag("Data/UPS/UPS2/UPS2_02-Peptide_Shaker_on_data_30__Peptide_Report.tabular", "UPS2 Replicate 2")
 ups2_diag("Data/UPS/UPS2/UPS2_03-Peptide_Shaker_on_data_27__Peptide_Report.tabular", "UPS2 Replicate 3")
