--- a/single-peptide-analysis-UPS.Rmd
+++ b/single-peptide-analysis-UPS.Rmd
@@ -12,19 +12,18 @@ output:
 # Introduction
 Analysis adapted from Caleb Easterly's "Single Peptide Results Analysis" for the UPS dataset.
 
-## Packages
-```{r}
-install.packages("dplyr")
-install.packages("pander")
-```
+---
+
+#### Packages
 
 ```{r}
 library(dplyr)
 library(stringr)
 library(pander)
+library(knitr)
 ```
 
-# Peptide Sampling
+### Peptide Sampling
 Let's randomly select 10 UPS peptides and 10 non-UPS peptides from the UPS1 dataset (replicate #3):
 
 ```{r}
@@ -33,7 +32,8 @@ Let's randomly select 10 UPS peptides and 10 non-UPS peptides from the UPS1 data
 peptide_report <- read.csv("Data/UPS/UPS1/UPS1_03-Peptide_Shaker_on_data_23__Peptide_Report.tabular",
          sep = "\t", comment.char="", header = TRUE) %>%
   select(proteins = Protein.s.,
-         sequence = Sequence)
+         sequence = Sequence,
+         counts = X.Validated.PSMs)
 
 # Splits into UPS peptides and non-UPS peptides
 ups_peptides <- filter(peptide_report, grepl("ups", proteins))
@@ -45,9 +45,9 @@ ups_peps_20 <- ups_peptides[sample(nrow(ups_peptides), 10),]
 non_ups_peps_20 <- non_ups_peptides[sample(nrow(non_ups_peptides), 10),]
 twenty_peps <- rbind(ups_peps_20, non_ups_peps_20)
 set.seed(24)
-fivepep <- twenty_peps[sample(20,5),]
-#five_peps
-fivepep <- fivepep$sequence
+fivepep_df <- twenty_peps[sample(20,5),]
+fivepep <- fivepep_df$sequence
+
 
 # Concatenates the two categories and writes it out in a text file for analysis
 write.table(twenty_peps$sequence, "twenty_peptides.txt", 
@@ -95,6 +95,16 @@ em
 ### MetaGOmics
 
 
+https://www.yeastrc.org/metagomics/viewUploadedFasta.do?uid=0WqzvC44s1XehAgR
+```{r}
+go_input <- select(fivepep_df, sequence, counts)
+for (i in 1:nrow(go_input)){
+  write.table(go_input[i,], paste('Data/metaGOmics/',go_input[i,]$sequence,".txt", sep=""), 
+            sep="\t", eol = "\r\n", quote=FALSE, row.names=FALSE, col.names=FALSE)
+  
+}
+```
+
 
 ### Combine all of the results:
 ```{r}
@@ -105,5 +115,5 @@ All of the results are below:
 
 ```{r}
 library(pander)
-knitr:kable(all_results)
+knitr::kable(all_results)
 ```
