--- a/single-peptide-analysis-UPS.Rmd
+++ b/single-peptide-analysis-UPS.Rmd
@@ -97,11 +97,11 @@ em
 
 https://www.yeastrc.org/metagomics/viewUploadedFasta.do?uid=0WqzvC44s1XehAgR
 ```{r}
+# Creates the input files for metaGOmics i.e., single peptide with spectral count (# of validated PSMs)
 go_input <- select(fivepep_df, sequence, counts)
 for (i in 1:nrow(go_input)){
   write.table(go_input[i,], paste('Data/metaGOmics/',go_input[i,]$sequence,".txt", sep=""), 
             sep="\t", eol = "\r\n", quote=FALSE, row.names=FALSE, col.names=FALSE)
-  
 }
 ```
 
