--- a/single-peptide-analysis-UPS.Rmd
+++ b/single-peptide-analysis-UPS.Rmd
@@ -30,7 +30,7 @@ Let's randomly select 10 UPS peptides and 10 non-UPS peptides from the UPS1 data
 
 # Obtains peptide report
 peptide_report <- read.csv("Data/UPS/UPS1/UPS1_03-Peptide_Shaker_on_data_23__Peptide_Report.tabular",
-         sep = "\t", comment.char="", header = TRUE) %>%
+         sep = "\t", comment.char="", header = TRUE, stringsAsFactors = FALSE) %>%
   select(proteins = Protein.s.,
          sequence = Sequence,
          counts = X.Validated.PSMs)
@@ -48,7 +48,6 @@ set.seed(24)
 fivepep_df <- twenty_peps[sample(20,5),]
 fivepep <- fivepep_df$sequence
 
-
 # Concatenates the two categories and writes it out in a text file for analysis
 write.table(twenty_peps$sequence, "twenty_peptides.txt", 
             sep="\n", quote=FALSE, row.names=FALSE, col.names=FALSE)
@@ -61,7 +60,7 @@ write.table(twenty_peps$sequence, "twenty_peptides.txt",
 - Paste the tabular list of peptides into the Unipept *Metaproteomics Analysis* web application (https://morty.ugent.be/mpa)
 
 ```{r}
-cov_pat <- "\ \\(.{3,4}\\)"
+cov_pat <- "\ \\(.{2,4}\\)"
 uni <- read.csv('results/unipept/UPS2_04-Unipept-20pep-42seed.csv',
                 stringsAsFactors = FALSE) %>%
     select(peptide,
@@ -100,15 +99,30 @@ https://www.yeastrc.org/metagomics/viewUploadedFasta.do?uid=0WqzvC44s1XehAgR
 # Creates the input files for metaGOmics i.e., single peptide with spectral count (# of validated PSMs)
 go_input <- select(fivepep_df, sequence, counts)
 for (i in 1:nrow(go_input)){
-  write.table(go_input[i,], paste('Data/metaGOmics/',go_input[i,]$sequence,".txt", sep=""), 
+  write.table(go_input[i,], paste('Data/metaGOmics/', go_input[i,]$sequence,".txt", sep=""), 
             sep="\t", eol = "\r\n", quote=FALSE, row.names=FALSE, col.names=FALSE)
 }
+peptide <- rep(0, 5)
+mg_go <- rep(0, 5)
+dir <- 'results/metaGOmics/'
+files <- list.files(dir)
+for (i in 1:5){
+    peptide[i] <- fivepep[i]
+    result <- read.delim(paste(dir, paste(fivepep[i], '.txt', sep=""), sep=""),
+                   stringsAsFactors = FALSE,
+                   na.strings = c("", "NA", "NaN"),
+                   comment.char = "#")
+    gos <- result$GO.acc
+    mg_go[i] <- paste(gos, collapse = "; ")
+}
+mg <- data.frame(peptide, mg_go, stringsAsFactors = FALSE)
+mg
 ```
 
 
 ### Combine all of the results:
 ```{r}
-all_results <- plyr::join_all(list(em, uni), by = "peptide")
+all_results <- plyr::join_all(list(em, mg, uni), by = "peptide")
 ```
 
 All of the results are below:
